--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 05:05:03 2018</p>
+         Last Run: Sat Jul 21 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>16</td>
                         <td>16</td>
                         <td>0</td>
-                        <td>54</td>
+                        <td>53</td>
                         <td>3</td>
                         <td>11</td>
                         <td>S</td>
@@ -46,7 +46,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>4</td>
                         <td>13</td>
                         <td>S</td>
@@ -55,14 +55,14 @@
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>2</td>
-                        <td>35</td>
+                        <td>20</td>
+                        <td>20</td>
+                        <td>0</td>
+                        <td>32</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>13</td>
                         <td>SSW</td>
-                        <td>16</td>
+                        <td>15</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -70,10 +70,10 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>29</td>
+                        <td>27</td>
                         <td>7</td>
                         <td>11</td>
-                        <td>SW</td>
+                        <td>WSW</td>
                         <td>38</td>
                      </tr>
                      <tr>
@@ -86,7 +86,7 @@
                         <td>7</td>
                         <td>13</td>
                         <td>WSW</td>
-                        <td>41</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -134,7 +134,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -147,7 +147,7 @@
                "data":[
                  "16",
                  "18",
-                 "19",
+                 "20",
                  "21",
                  "22"
                ]
@@ -204,7 +204,7 @@
                "data":[
                  "0",
                  "0",
-                 "2",
+                 "0",
                  "15",
                  "15"
                ]
@@ -214,10 +214,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "54",
-                 "43",
-                 "35",
-                 "29",
+                 "53",
+                 "42",
+                 "32",
+                 "27",
                  "25"
                ]
              },
@@ -228,9 +228,9 @@
                "data":[
                  "7",
                  "8",
-                 "16",
+                 "15",
                  "38",
-                 "41"
+                 "40"
                ]
              }
            ]
@@ -242,12 +242,13 @@
                   var MyNewChart = new Chart(ctx).BarAlt(data,options);
                   document.getElementById("legend_chartHTMLReportGenerator2").innerHTML=MyNewChart.generateLegend();
                </script>
+         <img src="http://www.wmiradar.com/alberta/latest_loop.gif">
          <hr style="border-width:5px ">
       </div>
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 05:05:03 2018</p>
+         Last Run: Sat Jul 21 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -276,7 +277,7 @@
                         <td>1</td>
                         <td>14</td>
                         <td>NE</td>
-                        <td>23</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -284,11 +285,11 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>44</td>
                         <td>0</td>
                         <td>14</td>
                         <td>NE</td>
-                        <td>20</td>
+                        <td>18</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -300,7 +301,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>18</td>
+                        <td>17</td>
                      </tr>
                   </tbody>
                </table>
@@ -419,7 +420,7 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "39",
-                 "43",
+                 "44",
                  "51"
                ]
              },
@@ -428,9 +429,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "23",
-                 "20",
-                 "18"
+                 "22",
+                 "18",
+                 "17"
                ]
              }
            ]
@@ -447,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 05:05:03 2018</p>
+         Last Run: Sat Jul 21 06:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -469,9 +470,9 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>2</td>
+                        <td>23</td>
+                        <td>23</td>
+                        <td>1</td>
                         <td>33</td>
                         <td>2</td>
                         <td>11</td>
@@ -481,8 +482,8 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>23</td>
-                        <td>23</td>
+                        <td>22</td>
+                        <td>22</td>
                         <td>2</td>
                         <td>35</td>
                         <td>1</td>
@@ -496,7 +497,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>4</td>
-                        <td>40</td>
+                        <td>39</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
@@ -512,7 +513,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
-                        <td>39</td>
+                        <td>38</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -520,7 +521,7 @@
                         <td>17</td>
                         <td>17</td>
                         <td>33</td>
-                        <td>56</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
@@ -570,8 +571,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "24",
                  "23",
+                 "22",
                  "21",
                  "19",
                  "17"
@@ -583,8 +584,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "24",
                  "23",
+                 "22",
                  "21",
                  "19",
                  "17"
@@ -640,7 +641,7 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "2",
+                 "1",
                  "2",
                  "4",
                  "31",
@@ -654,9 +655,9 @@
                "data":[
                  "33",
                  "35",
-                 "40",
+                 "39",
                  "47",
-                 "56"
+                 "55"
                ]
              },
              {
@@ -667,7 +668,7 @@
                  "33",
                  "35",
                  "37",
-                 "39",
+                 "38",
                  "40"
                ]
              }
