--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 06:05:04 2018</p>
+         Last Run: Sat Jul 21 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. MUSC Magic - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 21, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -36,17 +36,17 @@
                         <td>0</td>
                         <td>53</td>
                         <td>3</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>S</td>
-                        <td>7</td>
+                        <td>0</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>0</td>
-                        <td>42</td>
+                        <td>1</td>
+                        <td>41</td>
                         <td>4</td>
                         <td>13</td>
                         <td>S</td>
@@ -70,7 +70,7 @@
                         <td>21</td>
                         <td>21</td>
                         <td>15</td>
-                        <td>27</td>
+                        <td>26</td>
                         <td>7</td>
                         <td>11</td>
                         <td>WSW</td>
@@ -82,10 +82,10 @@
                         <td>22</td>
                         <td>22</td>
                         <td>15</td>
-                        <td>25</td>
+                        <td>23</td>
                         <td>7</td>
-                        <td>13</td>
-                        <td>WSW</td>
+                        <td>14</td>
+                        <td>W</td>
                         <td>40</td>
                      </tr>
                   </tbody>
@@ -203,7 +203,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "0",
+                 "1",
                  "0",
                  "15",
                  "15"
@@ -215,10 +215,10 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "53",
-                 "42",
+                 "41",
                  "32",
-                 "27",
-                 "25"
+                 "26",
+                 "23"
                ]
              },
              {
@@ -226,7 +226,7 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "7",
+                 "0",
                  "8",
                  "15",
                  "38",
@@ -248,7 +248,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 06:05:04 2018</p>
+         Last Run: Sat Jul 21 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -269,39 +269,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
-                        <td>0</td>
-                        <td>39</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>40</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NE</td>
-                        <td>22</td>
+                        <td>56</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
-                        <td>19</td>
-                        <td>19</td>
-                        <td>0</td>
-                        <td>44</td>
-                        <td>0</td>
-                        <td>14</td>
-                        <td>NE</td>
-                        <td>18</td>
-                     </tr>
-                     <tr>
-                        <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>1</td>
+                        <td>35</td>
                         <td>51</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>17</td>
+                        <td>50</td>
+                     </tr>
+                     <tr>
+                        <td>09:00 PM</td>
+                        <td>Chance of Rain</td>
+                        <td>15</td>
+                        <td>15</td>
+                        <td>33</td>
+                        <td>59</td>
+                        <td>0</td>
+                        <td>11</td>
+                        <td>NNE</td>
+                        <td>40</td>
                      </tr>
                   </tbody>
                </table>
@@ -345,9 +345,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "20",
-                 "19",
-                 "17"
+                 "18",
+                 "17",
+                 "15"
                ]
              },
              {
@@ -356,9 +356,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "20",
-                 "19",
-                 "17"
+                 "18",
+                 "17",
+                 "15"
                ]
              }
            ]
@@ -409,9 +409,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "0",
-                 "0",
-                 "1"
+                 "40",
+                 "35",
+                 "33"
                ]
              },
              {
@@ -419,9 +419,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "39",
-                 "44",
-                 "51"
+                 "50",
+                 "51",
+                 "59"
                ]
              },
              {
@@ -429,9 +429,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "22",
-                 "18",
-                 "17"
+                 "56",
+                 "50",
+                 "40"
                ]
              }
            ]
@@ -448,7 +448,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 06:05:04 2018</p>
+         Last Run: Sat Jul 21 07:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -484,7 +484,7 @@
                         <td>Partly Cloudy</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>2</td>
+                        <td>3</td>
                         <td>35</td>
                         <td>1</td>
                         <td>13</td>
@@ -501,7 +501,7 @@
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>37</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -509,7 +509,7 @@
                         <td>19</td>
                         <td>19</td>
                         <td>31</td>
-                        <td>47</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>11</td>
                         <td>E</td>
@@ -525,7 +525,7 @@
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>40</td>
+                        <td>39</td>
                      </tr>
                   </tbody>
                </table>
@@ -642,7 +642,7 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "1",
-                 "2",
+                 "3",
                  "4",
                  "31",
                  "33"
@@ -656,7 +656,7 @@
                  "33",
                  "35",
                  "39",
-                 "47",
+                 "46",
                  "55"
                ]
              },
@@ -667,9 +667,9 @@
                "data":[
                  "33",
                  "35",
-                 "37",
+                 "36",
                  "38",
-                 "40"
+                 "39"
                ]
              }
            ]
