--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 14:05:04 2018</p>
+         Last Run: Sat Jul 21 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -30,39 +30,39 @@
                   <tbody>
                      <tr>
                         <td>07:00 PM</td>
-                        <td>Chance of Rain</td>
+                        <td>Overcast</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>41</td>
-                        <td>51</td>
+                        <td>5</td>
+                        <td>50</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>80</td>
+                        <td>87</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Chance of Rain</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>30</td>
-                        <td>53</td>
+                        <td>Mostly Cloudy</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>11</td>
+                        <td>50</td>
                         <td>0</td>
                         <td>13</td>
                         <td>NE</td>
-                        <td>53</td>
+                        <td>67</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of Rain</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>36</td>
-                        <td>61</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>32</td>
+                        <td>59</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>50</td>
+                        <td>58</td>
                      </tr>
                   </tbody>
                </table>
@@ -107,8 +107,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "18",
-                 "17",
-                 "15"
+                 "18",
+                 "16"
                ]
              },
              {
@@ -118,8 +118,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "18",
-                 "17",
-                 "15"
+                 "18",
+                 "16"
                ]
              }
            ]
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "41",
-                 "30",
-                 "36"
+                 "5",
+                 "11",
+                 "32"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "53",
-                 "61"
+                 "50",
+                 "50",
+                 "59"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
-                 "53",
-                 "50"
+                 "87",
+                 "67",
+                 "58"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 14:05:04 2018</p>
+         Last Run: Sat Jul 21 15:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -230,51 +230,51 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>37</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>31</td>
+                        <td>28</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>21</td>
-                        <td>21</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>0</td>
-                        <td>40</td>
+                        <td>42</td>
                         <td>1</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>27</td>
+                        <td>25</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>19</td>
+                        <td>19</td>
                         <td>1</td>
-                        <td>44</td>
+                        <td>46</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>26</td>
+                        <td>22</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Clear</td>
                         <td>17</td>
                         <td>17</td>
                         <td>6</td>
-                        <td>53</td>
+                        <td>54</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>32</td>
+                        <td>ENE</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -282,11 +282,11 @@
                         <td>15</td>
                         <td>15</td>
                         <td>14</td>
-                        <td>61</td>
+                        <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>36</td>
+                        <td>33</td>
                      </tr>
                   </tbody>
                </table>
@@ -333,8 +333,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "22",
-                 "21",
                  "20",
+                 "19",
                  "17",
                  "15"
                ]
@@ -346,8 +346,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "22",
-                 "21",
                  "20",
+                 "19",
                  "17",
                  "15"
                ]
@@ -414,11 +414,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "36",
-                 "40",
-                 "44",
-                 "53",
-                 "61"
+                 "37",
+                 "42",
+                 "46",
+                 "54",
+                 "62"
                ]
              },
              {
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "31",
-                 "27",
-                 "26",
-                 "32",
-                 "36"
+                 "28",
+                 "25",
+                 "22",
+                 "29",
+                 "33"
                ]
              }
            ]
