--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 15:05:04 2018</p>
+         Last Run: Sat Jul 21 16:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,7 +33,7 @@
                         <td>Overcast</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>5</td>
+                        <td>4</td>
                         <td>50</td>
                         <td>1</td>
                         <td>13</td>
@@ -45,7 +45,7 @@
                         <td>Mostly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>50</td>
                         <td>0</td>
                         <td>13</td>
@@ -57,12 +57,12 @@
                         <td>Chance of Rain</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>32</td>
+                        <td>34</td>
                         <td>59</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>58</td>
+                        <td>57</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,9 +170,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "5",
-                 "11",
-                 "32"
+                 "4",
+                 "13",
+                 "34"
                ]
              },
              {
@@ -192,7 +192,7 @@
                "data":[
                  "87",
                  "67",
-                 "58"
+                 "57"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sat Jul 21 15:05:04 2018</p>
+         Last Run: Sat Jul 21 16:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -231,14 +231,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Clear</td>
-                        <td>22</td>
-                        <td>22</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
-                        <td>37</td>
+                        <td>38</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>28</td>
+                        <td>29</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -258,15 +258,15 @@
                         <td>19</td>
                         <td>19</td>
                         <td>1</td>
-                        <td>46</td>
+                        <td>45</td>
                         <td>0</td>
                         <td>13</td>
                         <td>E</td>
-                        <td>22</td>
+                        <td>23</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
                         <td>6</td>
@@ -274,19 +274,19 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ENE</td>
-                        <td>29</td>
+                        <td>30</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>62</td>
                         <td>0</td>
                         <td>10</td>
                         <td>E</td>
-                        <td>33</td>
+                        <td>34</td>
                      </tr>
                   </tbody>
                </table>
@@ -332,7 +332,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "22",
+                 "21",
                  "20",
                  "19",
                  "17",
@@ -345,7 +345,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "22",
+                 "21",
                  "20",
                  "19",
                  "17",
@@ -406,7 +406,7 @@
                  "0",
                  "1",
                  "6",
-                 "14"
+                 "13"
                ]
              },
              {
@@ -414,9 +414,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "37",
+                 "38",
                  "42",
-                 "46",
+                 "45",
                  "54",
                  "62"
                ]
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "28",
-                 "25",
-                 "22",
                  "29",
-                 "33"
+                 "25",
+                 "23",
+                 "30",
+                 "34"
                ]
              }
            ]
